Added new lectures

--- a/titelseite.tex
+++ b/titelseite.tex
@@ -30,7 +30,7 @@
     % AUTHOR SECTION
     % ----------------------------------------------------------------------------------------
 
-    \textsc{\large Course hold by Frank Wikström who kindly agreed for this notes to be published.}\\[1.5cm] % Minor heading such as course title
+    \textsc{\large Course hold by Frank Wikström who kindly agreed for these notes to be published.}\\[1.5cm] % Minor heading such as course title
 
 
     \begin{minipage}{0.5\textwidth}
