--- a/titelseite.tex
+++ b/titelseite.tex
@@ -14,16 +14,14 @@
     \includegraphics[width=\linewidth]{figures/LundUniversity-logo.png}
     \end{minipage} \\
     % \includegraphics[height=8cm]{figures/maple-leaf-gitter.png}
-    \textsc{\Large Lecture Notes for the course}\\[0.5cm] % Major heading such as course name
+    \textsc{\Large unofficial Lecture Notes for the course}\\[0.5cm] % Major heading such as course name
     % ----------------------------------------------------------------------------------------
     % TITLE SECTION
     % ----------------------------------------------------------------------------------------
     % \begin{onehalfspace}
     \HRule \\[0.4cm]
     { \LARGE \bfseries \sffamily Discrete Mathematics}\\[0.1cm]
-    % {\Large \bfseries Die freie Schrödingergleichung und Heisenberg'sche Unschärferelation}
     % \\[0.2cm] % Title of your document
-    % {\bfseries \Large Versuch  1 -- Bestimmung der Zugfestigkeit eines Kupferdrahtes}\\[0.4cm]
     \HRule \\[0.5cm]
     % \end{onehalfspace}
     % ----------------------------------------------------------------------------------------
